[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
tokio = {version = "1", features = ["full"]}
warp = "0.3"
pretty_env_logger = "0.4"
mongodb = "2.3.0"
serde = "1.0"
dotenv = "0.15.0"
log = "0.4"
jsonwebtoken = "8.3.0"
thiserror = "1.0"

[dev-dependencies]
serde_derive = "1.0"
